--- a/media/davewhipp-screen.css
+++ b/media/davewhipp-screen.css
@@ -91,6 +91,7 @@ video {
   font: inherit;
   vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -105,17 +106,21 @@ nav,
 section {
   display: block;
 }
+
 body {
   line-height: 1;
 }
+
 ol,
 ul {
   list-style: none;
 }
+
 blockquote,
 q {
   quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
@@ -123,6 +128,7 @@ q:after {
   content: "";
   content: none;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -153,7 +159,7 @@ code {
   font-size: 90%;
   /*line-height: 1em;*/
   font-family: Monaco, Menlo, monospace, sans-serif;
-  color: #aaa;
+  color: #c2c2c2;
 }
 
 p code {
@@ -208,7 +214,7 @@ h1 {
   left: 25%;
 }
 
-h1 + p {
+h1+p {
   /*subtitle*/
   font-style: italic;
   font-size: 110%;
@@ -216,7 +222,7 @@ h1 + p {
 
 h2 {
   font-size: 1.1em;
-  color: #bc412b;
+  color: #417e9b;
   margin-top: 3em;
   position: relative;
   top: 1.4em;
@@ -239,14 +245,14 @@ a {
 }
 
 a:hover {
-  color: #39f;
+  color: #417e9b;
 }
 
 #webaddress {
   margin-top: 1em;
   position: relative;
   left: 25%;
-  color: #bc412b;
+  color: #417e9b;
   font-family: Monaco, Menlo, monospace, sans-serif;
   font-size: 100%;
 }
