--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>{% if page.title %} {{ page.title }} | {% endif %} CV</title>
-    <link
-      href="media/{{ site.style }}-screen.css"
-      type="text/css"
-      rel="stylesheet"
-      media="screen"
-    />
-    <link
-      href="media/{{ site.style }}-print.css"
-      type="text/css"
-      rel="stylesheet"
-      media="print"
-    />
-  </head>
-  <body>
-    <div id="main">
-      <div id="content">{{ content }}</div>
-    </div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+    rel="stylesheet">
+  <title>{% if page.title %} {{ page.title }} | {% endif %} CV</title>
+  <link href="media/{{ site.style }}-screen.css" type="text/css" rel="stylesheet" media="screen" />
+  <link href="media/{{ site.style }}-print.css" type="text/css" rel="stylesheet" media="print" />
+</head>
+
+<body>
+  <div id="main">
+    <div id="content">{{ content }}</div>
+  </div>
+</body>
+
 </html>
