--- a/media/davewhipp-print.css
+++ b/media/davewhipp-print.css
@@ -141,7 +141,7 @@ body {
   font-size: 12pt;
   line-height: 1.35em;
   /*also written as...  font: normal normal 400 100%/1.5em;*/
-  font-family: Avenir, Verdana, sans-serif;
+  font-family: "Lato", sans-serif;
   /*margin-top: 1em;
 	margin-left: 1em;*/
 }
@@ -158,7 +158,7 @@ code {
   font: normal normal;
   font-size: 90%;
   /*line-height: 1em;*/
-  font-family: Monaco, Menlo, monospace, sans-serif;
+  font-family: "Source Code Pro", monospace;
   color: #c2c2c2;
 }
 
