--- a/media/davewhipp-screen.css
+++ b/media/davewhipp-screen.css
@@ -156,7 +156,7 @@ p {
 
 code {
   font: normal normal;
-  font-size: 90%;
+  font-size: 0.8rem;
   /*line-height: 1em;*/
   font-family: "Source Code Pro", monospace;
   color: #c2c2c2;
@@ -164,9 +164,10 @@ code {
 
 p code {
   display: block;
+  max-width: 25%;
   position: absolute;
   text-align: right;
-  right: -20%;
+  right: -25%;
 }
 
 ul {
