--- a/media/davewhipp-screen.css
+++ b/media/davewhipp-screen.css
@@ -161,7 +161,7 @@ p {
 code {
   font: normal normal;
   font-size: 0.8rem;
-  /*line-height: 1em;*/
+  line-height: 0.8rem;
   font-family: "Source Code Pro", monospace;
   color: #c2c2c2;
 }
